@@ -1,0 +1,1 @@
+portal_workflow/business_template_installation_workflow/scripts/BusinessTemplate_install
