@@ -1,4 +1,3 @@
 portal_alarms/bt5_upgrader
 portal_alarms/finalize_upgrader
 portal_alarms/upgrader_controller
-portal_workflow/business_template_installation_workflow/scripts/BusinessTemplate_install
